refactor: use SequencedCollection methods for first and last elements Fixes #1353