@@ -68,8 +68,8 @@ public class QueryJsonTest extends ScriptTest {
             .select("id", "email")
             .fetch(0, 0);
 
-    assertNotNull(list.get(0));
-    assertEquals("jsmith@gmail.com", list.get(0).get("email"));
+    assertNotNull(list.getFirst());
+    assertEquals("jsmith@gmail.com", list.getFirst().get("email"));
 
     list =
         JPA.all(Contact.class)
@@ -78,8 +78,8 @@ public class QueryJsonTest extends ScriptTest {
             .select("id", "email")
             .fetch(0, 0);
 
-    assertNotNull(list.get(0));
-    assertEquals("jsmith@gmail.com", list.get(0).get("email"));
+    assertNotNull(list.getFirst());
+    assertEquals("jsmith@gmail.com", list.getFirst().get("email"));
 
     // select custom field
     list =
@@ -88,7 +88,7 @@ public class QueryJsonTest extends ScriptTest {
             .select("id", "anotherAttrs.guardian.id")
             .fetch(0, 0);
 
-    assertEquals("1", list.get(0).get("anotherAttrs.guardian.id"));
+    assertEquals("1", list.getFirst().get("anotherAttrs.guardian.id"));
 
     // cast column value
     list =
@@ -98,7 +98,7 @@ public class QueryJsonTest extends ScriptTest {
             .select("anotherAttrs.guardian.id::integer")
             .fetch(0, 0);
 
-    assertEquals(1, list.get(0).get("anotherAttrs.guardian.id"));
+    assertEquals(1, list.getFirst().get("anotherAttrs.guardian.id"));
   }
 
   @Test
@@ -112,8 +112,8 @@ public class QueryJsonTest extends ScriptTest {
             .select("id", "street")
             .fetch(0, 0);
 
-    assertNotNull(list.get(0));
-    assertEquals("my street", list.get(0).get("street"));
+    assertNotNull(list.getFirst());
+    assertEquals("my street", list.getFirst().get("street"));
 
     list =
         JPA.all(Address.class)
@@ -122,8 +122,8 @@ public class QueryJsonTest extends ScriptTest {
             .select("id", "street")
             .fetch(0, 0);
 
-    assertNotNull(list.get(0));
-    assertEquals("my street", list.get(0).get("street"));
+    assertNotNull(list.getFirst());
+    assertEquals("my street", list.getFirst().get("street"));
 
     // select on a custom field with level >= 1 isn't supported
     list =
@@ -132,6 +132,6 @@ public class QueryJsonTest extends ScriptTest {
             .select("contact.anotherAttrs.guardian.id")
             .fetch(0, 0);
 
-    assertNull(list.get(0).get("contact.anotherAttrs.guardian.id"));
+    assertNull(list.getFirst().get("contact.anotherAttrs.guardian.id"));
   }
 }
