@@ -98,12 +98,12 @@ public class ResourceTest extends RpcTest {
     Contact p = JPA.em().find(Contact.class, ((Map) res.getItem(0)).get("id"));
 
     assertEquals(Title.class, p.getTitle().getClass());
-    assertEquals(Address.class, p.getAddresses().get(0).getClass());
+    assertEquals(Address.class, p.getAddresses().getFirst().getClass());
     assertEquals(Circle.class, p.getCircle(0).getClass());
     assertEquals(LocalDate.class, p.getDateOfBirth().getClass());
 
     assertEquals("mr", p.getTitle().getCode());
-    assertEquals("France", p.getAddresses().get(0).getCountry().getName());
+    assertEquals("France", p.getAddresses().getFirst().getCountry().getName());
     assertEquals("family", p.getCircle(0).getCode());
     assertEquals("1977-05-01", p.getDateOfBirth().toString());
   }
@@ -150,7 +150,7 @@ public class ResourceTest extends RpcTest {
     assertNotSame(c.getAddresses(), n.getAddresses());
     assertEquals(c.getAddresses().size(), n.getAddresses().size());
 
-    assertSame(c, c.getAddresses().get(0).getContact());
-    assertSame(n, n.getAddresses().get(0).getContact());
+    assertSame(c, c.getAddresses().getFirst().getContact());
+    assertSame(n, n.getAddresses().getFirst().getContact());
   }
 }
